policies/httproute-enforce-allowed-hostnames/tests/base/binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vaplibtest-httproute-hostnames
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: test
    objectSelector: {}
  paramRef:
    name: vaphttproutehostnameparams-test
    namespace: test
    parameterNotFoundAction: Deny
  policyName: vaplib-httproute-enforce-allowed-hostnames
  validationActions:
  - Deny
