policies/httproute-enforce-allowed-hostnames/tests/base/cr-param.yaml
apiVersion: vap-library.io/v1beta1
kind: VAPLIBHTTPRouteHostnameParam
metadata:
  name: vaplibtest-param
spec:
  allowedHostnames:
  - test.example.com
  - test2.example.com
