policies/httproute-enforce-allowed-hostnames/tests/base/test.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vaplibtest-httproute-example
spec:
  hostnames:
  - test2.example.com
  parentRefs:
  - name: test
